Update app title and enhance table of contents layout
- Changed the app title from "SvelteKit App" to "VistaKine" for branding.
- Added a meta description for improved SEO and user understanding of the platform.
- Refactored the table of contents layout to include section descriptions and improved styling for better user experience.

--- a/src/app.html
+++ b/src/app.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>SvelteKit App</title>
+    <title>VistaKine</title>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="VistaKine is a platform for learning about the human body and its systems."
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css"
